--- a/content/blogs2/blog3.rmd
+++ b/content/blogs2/blog3.rmd
@@ -395,13 +395,6 @@ This is useful and shows us that only very few observations if any have a differ
 
 Now, we would like to explore whether the mean IMDB rating for Steven Spielberg and Tim Burton are the same or not. Thanks to the confidence intervals already being calculated for the mean ratings of these two directors, we can see they overlap.
 
-We see this in the image included below.
-
-
-```{r directors, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("images", "directors.png"), error = FALSE)
-```
-
 Our next objective will be to reproduce the graph above.
 
 We will also run a hypothesis test to test the difference between the two means. 
@@ -748,15 +741,8 @@ Every so often, we hear warnings from commentators on the "inverted yield curve"
 In addition, many articles and commentators think that, e.g., [*Yield curve inversion is viewed as a harbinger of recession*](https://www.bloomberg.com/news/articles/2019-08-14/u-k-yield-curve-inverts-for-first-time-since-financial-crisis). One can always doubt whether inversions are truly a harbinger of recessions, and [use the attached parable on yield curve inversions](https://twitter.com/5_min_macro/status/1161627360946511873).
 
 
-Lets look a little further into this
 
-```{r yield_curve_parable.jpg, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("images", "yield_curve_parable.jpg"), error = FALSE)
-```
-
-
-
-WE are gonna use the [FRED database](https://fred.stlouisfed.org/) to download historical yield curve rates, and plot the yield curves since 1999 to see when the yield curves flatten. 
+We are gonna use the [FRED database](https://fred.stlouisfed.org/) to download historical yield curve rates, and plot the yield curves since 1999 to see when the yield curves flatten. 
 
 First, we will load the yield curve data file that contains data on the yield curve since 1960-01-01
 
@@ -782,13 +768,6 @@ Let us compute the following 3 graphs presenting the data:
 
 ### Yields on US rates by duration since 1960
 
-Let us compute the graph of Yields on U.S. Treasury rates since 1960 as the one below:
-
-```{r yield_curve_1, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("images", "yield_curve1.png"), error = FALSE)
-```
-
-We reproduce that plot by utitilizing the code below:
 
 ```{r,fig,width=50}
 
@@ -836,12 +815,6 @@ Interestingly, we see that the rates to indeed swing somewhat in paralel overtim
 
 ### Monthly yields on US rates by duration since 1999 on a year-by-year basis
 
-Let us compute the graph of US Yield Curve as the one below:
-
-```{r yield_curve_2, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("images", "yield_curve2.png"), error = FALSE)
-```
-
 We reproduce that plot by utitilizing the code below:
 
 ```{r,fig.width=10}
@@ -885,12 +858,6 @@ ggplot(yield_curve2,aes(x=as.factor(maturity),y=value,group=month,color=factor(y
 What we see is that over the years the yield has been slowly falling across all durations.
 
 ### 3-month and 10-year yields since 1999
-
-Let us compute the graph of Yield Curve Inversion as the one below:
-
-```{r yield_curve_3, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("images", "yield_curve3.png"), error = FALSE)
-```
 
 We reproduce that plot by utitilizing the code below:
 
@@ -946,11 +913,6 @@ ggplot(yield_curve3,aes(x=date,y=yield_avg,color=duration))+
 
 ### The Final Graph of Yield Curve
 
-At the end of this challenge, we want to produce this chart:
-
-```{r yield_curve_challenge, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("images", "yield_curve_challenge.png"), error = FALSE)
-```
 
 Besides calculating the spread (10year - 3months), we need to first set up data for US recessions.
 The code below creates a dataframe with all US recessions since 1946: 
